--- a/python4regex.html
+++ b/python4regex.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Reference guide for regular expression in Python</title>
+<title>Reference guide for regular expressions in Python</title>
 <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
 
-<h1>Reference guide for regular expression in Python</h1>
+<h1>Reference guide for regular expressions in Python</h1>
 
 <p>A Collapsible:</p>
 <button class="collapsible">Open Collapsible</button>
