--- a/python4regex.html
+++ b/python4regex.html
@@ -9,7 +9,7 @@
 
 <h1>Reference guide for regular expressions in Python</h1>
 
-<p>A Collapsible:</p>
+<p>Matching text patterns</p>
 <button class="collapsible">Open Collapsible</button>
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
