--- a/python4regex.html
+++ b/python4regex.html
@@ -8,8 +8,19 @@
 <body>
 
 <h1>Reference guide for regular expressions in Python</h1>
+  
+  <nav>
+  <ul>
+    <li><a href="#matching">Matching text patterns</a></li>
+    <li><a href="#groups">Using groups for flexible matching</a></li>
+    <li><a href="#search">Looking for matches and extracting matches</a></li>
+    <li><a href="#flags">Fine-tuning search with flags</a></li>
+    <li><a href="#sub">Replacing and modifying parts of text</a></li>
+    <li><a href="#objects">Using the match objects returned by search functions </a></li>
+  </ul>
+</nav>
 
-<h2>Matching text patterns</h2>
+<h2 id='matching'>Matching text patterns</h2>
 <button class="collapsible">Matching text literally</button>
 <div class="content">
   <p><strong>Use a string literal (concatenate ordinary characters)</strong></p>
@@ -169,7 +180,7 @@ Alternation is non-greedy: stops when the first match is found, looking at the e
 
 
 
-<h2>Using groups for flexible matching</h2>
+<h2 id='groups'>Using groups for flexible matching</h2>
 <button class="collapsible">text</button>
 <div class="content">
   <p><strong>text</strong></p>
@@ -181,7 +192,7 @@ Alternation is non-greedy: stops when the first match is found, looking at the e
   <p>text</p>
 </div>
 
-<h2>Looking for matches and extracting matches
+<h2 id='search'>Looking for matches and extracting matches
 </h2>
 <button class="collapsible">text</button>
 <div class="content">
@@ -194,7 +205,7 @@ Alternation is non-greedy: stops when the first match is found, looking at the e
   <p>text</p>
 </div>
 
-<h2>Fine-tuning search with flags
+<h2 id='flags'>Fine-tuning search with flags
 </h2>
 <button class="collapsible">text</button>
 <div class="content">
@@ -207,7 +218,7 @@ Alternation is non-greedy: stops when the first match is found, looking at the e
   <p>text</p>
 </div>
 
-<h2>Replacing and modifying parts of text
+<h2 id='sub'>Replacing and modifying parts of text
 </h2>
 <button class="collapsible">text</button>
 <div class="content">
@@ -220,7 +231,7 @@ Alternation is non-greedy: stops when the first match is found, looking at the e
   <p>text</p>
 </div>
 
-<h2>Using the match objects returned by search functions
+<h2 id='objects'>Using the match objects returned by search functions
 </h2>
 <button class="collapsible">text</button>
 <div class="content">
