--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   
   <nav>
   <ul>
-    <li><a href="#matching">Matching text patterns</a></li>
-    <li><a href="#groups">Using groups for flexible matching</a></li>
-    <li><a href="#search">Looking for matches and extracting matches</a></li>
-    <li><a href="#flags">Fine-tuning search with flags</a></li>
-    <li><a href="#sub">Replacing and modifying parts of text</a></li>
-    <li><a href="#objects">Using the match objects returned by search functions </a></li>
+    <li><a href="#matching">re: Matching text patterns</a></li>
+    <li><a href="#groups">re: Using groups for flexible matching</a></li>
+    <li><a href="#search">re: Looking for matches and extracting matches</a></li>
+    <li><a href="#flags">re: Fine-tuning search with flags</a></li>
+    <li><a href="#sub">re: Replacing and modifying parts of text</a></li>
+    <li><a href="#objects">re: Using the match objects returned by search functions </a></li>
   </ul>
 </nav>
 
